--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
     "pg": "^7.9.0",
     "sqlite3": "^4.0.6",
@@ -18,7 +21,7 @@
     "jest": "^24.7.1",
     "nodemon": "^1.18.11"
   },
-  "jest":{
+  "jest": {
     "testEnviornment": "node"
   }
 }
